# $Id$

AUTOMAKE_OPTIONS = foreign

SUBDIRS = environment

includedir = $(prefix)/include/emu

include_HEADERS = emu.h
include_HEADERS += emu_cpu_data.h
include_HEADERS += emu_cpu_functions.h
include_HEADERS += emu_cpu.h
include_HEADERS += emu_cpu_instruction.h
include_HEADERS += emu_cpu_itables.h
include_HEADERS += emu_cpu_stack.h
include_HEADERS += emu_fpu_instruction.h
include_HEADERS += emu_getpc.h
include_HEADERS += emu_graph.h
include_HEADERS += emu_hashtable.h
include_HEADERS += emu_instruction.h
include_HEADERS += emu_list.h
include_HEADERS += emu_log.h
include_HEADERS += emu_memory.h
include_HEADERS += emu_queue.h
include_HEADERS += emu_shellcode.h
include_HEADERS += emu_source.h
include_HEADERS += emu_stack.h
include_HEADERS += emu_string.h
include_HEADERS += emu_track.h
include_HEADERS += emu_breakpoint.h


#include_HEADERS = emu.h
#include_HEADERS += emu_log.h
#include_HEADERS += emu_cpu.h
#include_HEADERS += emu_memory.h


#noinst_HEADERS = emu_cpu_data.h
#noinst_HEADERS += emu_cpu_functions.h
#noinst_HEADERS += emu_cpu_itables.h
#noinst_HEADERS += emu_cpu_stack.h
