# $Id$

includedir = $(prefix)/include/emu/environment/win32

include_HEADERS = emu_env_w32.h
include_HEADERS += emu_env_w32_dll.h
include_HEADERS += env_w32_dll_export_hooks.h
include_HEADERS += emu_env_w32_dll_export.h
include_HEADERS += env_w32_dll_export_kernel32_hooks.h
include_HEADERS += env_w32_dll_export_urlmon_hooks.h
include_HEADERS += env_w32_dll_export_ws2_32_hooks.h
include_HEADERS += env_w32_dll_export_msvcrt_hooks.h
include_HEADERS += env_w32_dll_export_shell32_hooks.h
include_HEADERS += env_w32_dll_export_shdocvw_hooks.h

